Production/Production/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Best_Contact_Method__c</fullName>
        <label>Best Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Best_Contact_Number__c</fullName>
        <label>Best Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Best_Contact_Time__c</fullName>
        <label>Best Contact Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_email__c</fullName>
        <label>Best email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CONFIRMEDDECEASEDFLAG__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Confirmed as deceased.</inlineHelpText>
        <label>Confirmed Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CONFIRMEDGONEAWAYFLAG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Gone Away</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CUSTOMERNUMBER__c</fullName>
        <externalId>true</externalId>
        <label>Customer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Afternoon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Afternoon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Evening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Evening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Morning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Morning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HASSPECIALCARELEVEL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISAUDIOIMPAIRED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audio Impaired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISPHYSICALLYDISABLED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physically Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISVIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISVISUALLYIMPAIRED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visually Impaired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ONLINEUSERNAME__c</fullName>
        <label>Online Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREFERRED_NAME__c</fullName>
        <label>Preferred Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Number__c</fullName>
        <label>Preferred Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Time__c</fullName>
        <label>Preferred Contact Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_email__c</fullName>
        <label>Preferred email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Related_CLI__c</fullName>
        <label>Related CLI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMPDECEASEDFLAG__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Reported as deceased.</inlineHelpText>
        <label>Temporary Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMPGONEAWAYFLAG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temporary Gone Away</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Social_Hub_Contact</fullName>
        <active>true</active>
        <label>Social Hub Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>TalkTalk_Contact</fullName>
        <active>true</active>
        <label>TalkTalk Contact</label>
    </recordTypes>
</CustomObject>